--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -74,11 +74,11 @@
                 top: 180px;
                 left: 50%;
                 margin-left: -22px;
-                background: url('restart.png');
+                background: url('restart2.0.png');
                 background-size: cover;
             }
             .restartButton:hover {
-                background: url('restartHover.png');
+                background: url('restartHover2.0.png');
                 background-size: cover;
             }
             .button {
