--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -109,7 +109,7 @@
     <body>
         <div id="mainBlock">
             <div id="header">
-                Tic Tac Toe (Alpha)
+                Tic Tac Toe (v1.0a)
             </div>
             <div id="gameSpace">
                 <div id="ver">
