--- a/anim.html
+++ b/anim.html
@@ -4,6 +4,8 @@
         <style>
             body {
                 background: rgba(255, 130, 130, 1);
+                min-width: 500px;
+                min-height: 500px;
             }
             #circle {
                 outline: none;
