--- a/cats/index.html
+++ b/cats/index.html
@@ -4,6 +4,9 @@
         <link rel="stylesheet" type="text/css" href="css/main.css"> 
     </head>
     <body>
+        <div id="pagePreloader">
+            <div id="preloaderText">Page is prepearing...</div>
+        </div>
         <div id="mainBlock">
             <div id="header">
                 <div id="browserPanel">
