--- a/cats/index.html
+++ b/cats/index.html
@@ -4,9 +4,6 @@
         <link rel="stylesheet" type="text/css" href="css/main.css"> 
     </head>
     <body>
-        <div id="pagePreloader">
-            <div id="preloaderText">Page is prepearing...</div>
-        </div>
         <div id="mainBlock">
             <div id="header">
                 <div id="browserPanel">
@@ -16,7 +13,9 @@
                 </div>
                 <div id="pageName"></div>
             </div>
-            <div id="content"></div>
+            <div id="content">
+                <div id="contentSizes"></div>
+            </div>
         </div>
     </body>
     <script src="scripts/main.js"></script>
