--- a/cats/index.html
+++ b/cats/index.html
@@ -14,9 +14,7 @@
                 </div>
                 <div id="pageName"></div>
             </div>
-            <div id="content">
-                <div id="contentSizes"></div>
-            </div>
+            <div id="content"></div>
         </div>
     </body>
     <script src="scripts/main.js"></script>
