--- a/cats/index.html
+++ b/cats/index.html
@@ -17,5 +17,6 @@
             <div id="content"></div>
         </div>
     </body>
+    <script src="scripts/get.addon"></script>
     <script src="scripts/main.js"></script>
 </html>
